service-deploy/certmanager.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
  namespace: istio-ingress
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http-default
      protocol: HTTP
    hosts:
    - rabbitone.io
  - port:
      number: 443
      name: https-default
      protocol: HTTPS
    hosts:
    - rabbitone.io
    tls:
      mode: SIMPLE
      credentialName: rabbitone-certificate-prod


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: certmanager
  namespace: istio-ingress
spec:
  hosts:
  - "rabbitone.io"
  gateways:
  - istio-ingress/helloworld-gateway
  http:
  - match:
    - uri:
        prefix: /.well-known/
    route:
    - destination:
        port:
          number: 8089
        host: cm-acme-http-solver-pjhrt
